--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.material:material-icons-extended'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -80,13 +81,13 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
-    def exoPlayerVersion = "1.1.0"
-    implementation "com.google.android.exoplayer:exoplayer-core:${exoPlayerVersion}"
-    implementation "com.google.android.exoplayer:exoplayer-dash:${exoPlayerVersion}"
-    implementation "com.google.android.exoplayer:exoplayer-database:${exoPlayerVersion}"
-    implementation "com.google.android.exoplayer:exoplayer-datasource:${exoPlayerVersion}"
-    implementation "com.google.android.exoplayer:exoplayer-hls:${exoPlayerVersion}"
-    implementation "com.google.android.exoplayer:exoplayer-smoothstreaming:${exoPlayerVersion}"
-    implementation "com.google.android.exoplayer:exoplayer-ui:${exoPlayerVersion}"
-    implementation "com.google.android.exoplayer:extension-mediasession:${exoPlayerVersion}"
+    def media3Version = "1.1.0"
+    implementation "androidx.media3:media3-exoplayer:${media3Version}"
+    implementation "androidx.media3:media3-exoplayer-dash:${media3Version}"
+    implementation "androidx.media3:media3-database:${media3Version}"
+    implementation "androidx.media3:media3-datasource:${media3Version}"
+    implementation "androidx.media3:media3-exoplayer-hls:${media3Version}"
+    implementation "androidx.media3:media3-exoplayer-smoothstreaming:${media3Version}"
+    implementation "androidx.media3:media3-ui:${media3Version}"
+    implementation "androidx.media3:media3-session:${media3Version}"
 }
